--- a/tareas/semana 1/Análisis de variables.Rmd
+++ b/tareas/semana 1/Análisis de variables.Rmd
@@ -1,4 +1,4 @@
-
+## Cristopher Chacon
 # Tarea 1
 
 Siga el siguiente documento y escriba el código en las secciones señaladas.
@@ -23,23 +23,13 @@ Con el fin de analizar y tratar de predecir el precio de las casas ubicadas en e
 ## Análisis del dataset
 
 Lea el dataset con la función read.csv y guardelo en una variable
-
-Ejemplo:
-
-`casas <- read.csv('kc_house_data.csv', header = T, na.strings = '?')`
-
 ```{r}
-# Escriba su código aqui
+casas <- read.csv('kc_house_data.csv', header = T, na.strings = '?')
 ```
 
 Utilice la función summary sobre el dataset
-
-Ejemplo:
-
-`summary(casas)`
-
 ```{r}
-# Escriba su código aqui
+summary(casas)
 ```
 
 ```{r}
@@ -48,34 +38,22 @@ library(caTools)
 
 #Librería de gráficos
 library(ggplot2)
-#Evitar mostrar warning messages
-options(warn=-1)
 ```
 
 Cargue en una variable las columnas 'price' y 'sqft_living'
-
-Ejemplo
-
-`casas <-casas[,c(3,6)]`
-
 ```{r}
-# Escriba su código aqui
+price.and.sqft_living <-casas[,c(3,6)]
+price.and.sqft_living
 ```
 
 Utilice la función summary sobre la nueva variable
-
 ```{r}
-# Escriba su código aqui
+summary(price.and.sqft_living)
 ```
 
 Aplique la función de correlación para obtener las correlaciones entre las columnas seleccionadas (price, sqft_living)
-
-Ejemplo:
-
-`cor(casas)`
-
 ```{r}
-# Escriba su código aqui
+cor(price.and.sqft_living)
 ```
 
 ### Interpretando los resultados de la correlación
@@ -96,13 +74,9 @@ Ejemplo:
 Existen varios métodos para calcular la correlación, la función 'cor' permite especificar el tipo de método mediante el parámetro 'method'
 
 Ejemplo
-
-`cor(casas, method='pearson')`
-
-`cor(casas, method='spearman')`
-
 ```{r}
-# Escriba su código aqui
+cor(price.and.sqft_living, method='pearson')
+cor(price.and.sqft_living, method='spearman')
 ```
 
 ### Visualización
@@ -112,11 +86,8 @@ Por último vamos a visualizar los datos del dataset con respecto a las columnas
 Con la función plot cree un gráfico de dispersión, asigne la columna 'price' al eje Y y la columna sqft_living al eje X
 
 Ejemplo
-
-`plot(y = casas$price,x = casas$sqft_living, main = 'Relación entre Precio y Metros cuadrados', ylab = 'price', xlab = 'sqft_living')`
-
 ```{r}
-# Escriba su código aqui
+plot(y = price.and.sqft_living$price,x = price.and.sqft_living$sqft_living, main = 'Relación entre Precio y Metros cuadrados', ylab = 'price', xlab = 'sqft_living')
 ```
 
 ## Conclusiones
