--- a/ctec_ml_s6/clasificacion 2.Rmd
+++ b/ctec_ml_s6/clasificacion 2.Rmd
@@ -14,52 +14,116 @@ Librerias
 ```{r}
 library(caTools)
 library(rpart)
-#..........Librerias de los modelos
+library(rpart.plot)
+library(randomForest)
+library(dplyr)
+library(ggplot2)
+library(caret)
+library(class)
 ```
 
-1. Desarolle el An?lisis del Problema
-```{r}
-# Construya el análisis del problema
+1. Desarolle el Analisis del Problema
+
+Los datos se obtienen mediante el  parte oficial de transito que realiza la Direccion General de Policia de Transito al presentarse un accidente, los cuales ingresan a la base de datos de dos formas (hand held y papel). Debido a que parte de la labor principal de la Institucion es salvar vidas, y por los recursos limitados que existen, se trabaja solo con accidentes con heridos y/o fallecidos; y no se trabaja con accidentes que presentan solo daños materiales. Ademas, posteriormente inicia el proceso de limpieza, correccion de inconsistencias, validacion de algunas variables,  georeferenciacion de los accidentes, entre otros.
 
 
-# Los datos se obtienen mediante el  parte oficial de tr?nsito que realiza la Direcci?n General de Polic?a de Tr?nsito al presentarse un accidente, los cuales ingresan a la base de datos de dos formas (hand held y papel). Debido a que parte de la labor principal de la Instituci?n es salvar vidas, y por los recursos limitados que existen, se trabaja solo con accidentes con heridos y/o fallecidos; y no se trabaja con accidentes que presentan solo da?os materiales. Adem?s, posteriormente inicia el proceso de limpieza, correcci?n de inconsistencias, validaci?n de algunas variables,  georeferenciaci?n de los accidentes, entre otros.
+Accidente con victima se refiere cuando en el accidente de transito al menos uno de los participantes resulto: herido leve, grave o fallecido.
 
+Para mis informacion revisar la metodologia del documento Memoria estadistica de accidentes de transito con victimas.Periodo 2012-2014.
 
-#Accidente con v?ctima se refiere cuando en el accidente de tr?nsito al menos uno de los participantes resulto: herido leve, grave o fallecido.
-
-#Para m?s informaci?n revisar la metodolog?a del documento Memoria estad?stica de accidentes de tr?nsito con v?ctimas.Periodo 2012-2014.
-
-```
 Fuente del dataset:
 http://datosabiertos.csv.go.cr/dashboards/19683/accidentes/
 
 1. Cargue el archivo nombre.csv en una variable
 
 ```{r}
-# Escriba su c?digo aqui
+# na.strings = c("Desconocido"),
+data <- read.csv('data.csv', strip.white = T,
+                 colClasses = c("NULL", NA, NA, "NULL", NA,NA, NA, NA, NA, NA, NA, NA, "NULL", "NULL", "NULL"))
 ```
 
 2. Desarolle el Entendimiento de los Datos
-
 ```{r}
-# Escriba su c?digo aqui
+glimpse(data)
+summary(data)
+```
+Rol: Donde iba el accidentado.
+Atendido: Si el accidente debe ser atentido
+Edad: Edad.
+Sexo: Sexo.
+Anio: Año.
+Mes: Mes.
+Dia: Dia.
+Provincia: Provincia.
+Canton: Canton.
+Distrito: Distrito.
+```{r}
+names(data) <- c("rol", "atentido", "edad", "sexo", "anio", "mes", "dia", "provincia", "canton", "distrito")
+levels(data$atentido) <- c("si", "si", "no", "si")
+
+data %>% mutate(variable = if_else(condición, valor_true, valor_false)) %>% mutate(variable = as.factor(as.characters(variable))))
+
+glimpse(data)
+summary(data)
+table(data$edad)
+anyNA(data)  # data <- na.omit(data)
 ```
 
-3. Utilizando barplot cree un gr?fico de los atributos del dataset, observe las correlaciones entre atributos
-
+3. Utilizando barplot cree un grafico de los atributos del dataset, observe las correlaciones entre atributos
 ```{r}
-# Escriba su c?digo aqui
+ggplot(data, aes(x = rol)) + geom_histogram(stat = "count") + facet_grid(c("atentido")) + coord_flip()
+ggplot(data, aes(x = sexo)) + geom_histogram(stat = "count") + facet_grid(c("atentido")) + coord_flip()
+ggplot(data, aes(x = edad)) + geom_histogram(stat = "count") + facet_grid(c("atentido")) + coord_flip()
+ggplot(data, aes(x = dia)) + geom_histogram(stat = "count") + facet_grid(c("atentido")) + coord_flip()
+ggplot(data, aes(x = mes)) + geom_histogram(stat = "count") + facet_grid(c("atentido")) + coord_flip()
 ```
 
 
 4. Realice al menos 5 modelos de los observados en clase
 ```{r}
-# Escriba su c?digo aqui
+# Crear los sets de entrenamiento y prueba
+set.seed(23)
+sample <- sample.split(data$atentido, SplitRatio = 0.7)
+data.train <- data[sample,] 
+data.test <- data[!sample,]
 ```
 
-5. Evaluaci?n de los modelos
+
 ```{r}
-# Escriba su c?digo aqui
+# Modelo de Regresion logistica
+set.seed(3333)
+knn_fit <- train(atentido ~ rol + sexo + edad, data = data.train, method = "knn", trControl = trainControl())
+
+
+
+
+
+
+# predicted.type <- knn(data.train[, c("rol", "edad", "sexo")], data.test[, c("rol", "edad", "sexo")],      data.train$atentido, k = 1)
+#error <- mean(predicted.type != test$Type)  #Error in prediction
+# confusionMatrix(predicted.type,test$Type) #Confusion Matrix
+```
+5. Evaluacion de los modelos
+```{r}
+
+
+# Modelo de Arbol de Decision
+tree <- rpart(atentido ~ rol + sexo + edad, data = data.train, method =  'class')
+rpart.plot(tree, shadow.col = "gray", main = "Hongos No Edibles")
+tree.predict <- predict(tree, newdata = data.test, type = 'class')
+table(data.test$atentido, tree.predict)
+
+
+# Modelo de Bosque Aleatorio
+forest <- randomForest(atentido ~ rol + sexo + edad, data = data.train)
+forest.predict <- predict(forest, newdata = data.test, type = 'class')
+table(data.test$atentido, forest.predict)
+
+
+# Modelo de Regresion logistica
+regression <- glm(atentido  ~ rol + sexo + edad, data = data.train, family = binomial)
+regression.predict <- predict(regression, newdata = data.test, type = 'response')
+table(data.test$atentido, regression.predict >= 0.5)
 
 ```
 
